code scrubbing and cleanup after running sonar java stylechecker